@@ -1,3 +1,5 @@
+2013-03-27: Add -z option to start y-axis at zero.
+
 2013-03-27: Don't use suptitle() to draw annotation at the bottom of the plots (makes
             the annotation work in matplotlib 1.2.1).
 
